Create index.html with initial webpage layout
Added basic HTML structure and content for the webpage.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+ <!DOCTYPE html>
+ <html lang="en">
+   <head>
+      <meta charset="utf-8">
+      <title>Addam Dano - INLS 572 001-LEC:  Assignment 2</title>
+      <link rel="stylesheet" href="styles.css">
+   </head>
+   <body>
+    <header>
+        <h1>
+         Addam Dano - INLS 572 001-LEC: Assignment 1 Simple Web Page
+      </h1>
+    </header>
+    <main>
+        <p>This website is intended to serve as a test/demonstration of my understanding of web development so far, even if it is rudimentary at the moment.</p>
+        <p>As I progress through this course and gain a deeper understanding and mastery of web development concepts, I want to create a website about UNC Chapel Hill and why someone might consider applying to the school. Target audience may include prospecting students and their families.</p>
+        <img src="image.jpg" alt="image desc">
+    </main>
+</body>
 
+ </html>
