--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
    </head>
    <body>
     <header>
-        <h1>
+        <h1 class="header">
          Addam Dano - INLS 572 001-LEC: Assignment 2
       </h1>
     </header>
     <main>
+      
         <img class="backgroundimage" src="UNCCH.png" alt="University of North Carolina at Chapel Hill">
     </main>
 </body>
