--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       </h1>
     </header>
     <main>    
+      <p class="par1">The University of North Carolina at Chapel Hill (UNC Chapel Hill) is the oldest public university in the United States, chartered in 1789 and enrolling students since 1795. It is recognized as a global leader in innovative teaching, research, and public service. The university offers a diverse range of programs and is committed to preparing students to thrive in a rapidly evolving economy. With a focus on academic excellence, UNC Chapel Hill is dedicated to fostering a diverse student body and promoting leadership and innovation. </p>
       <img class="logoimage" src="logo.png" alt="Logo">
     </main>
 </body>
