Update university statistics and class names in index.html

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     </header>
     <main>    
       <p class="par1">The University of North Carolina at Chapel Hill (UNC Chapel Hill) is the oldest public university in the United States, chartered in 1789 and enrolling students since 1795. It is recognized as a global leader in innovative teaching, research, and public service. The university offers a diverse range of programs and is committed to preparing students to thrive in a rapidly evolving economy. With a focus on academic excellence, UNC Chapel Hill is dedicated to fostering a diverse student body and promoting leadership and innovation. </p>
-      <p class="pars">Graduation Rate: Approximately 92% of students complete their degrees, placing UNC in the top 5% nationwide for graduation outcomes. to thrive in a rapidly evolving economy. With a focus on academic excellence, UNC Chapel Hill is dedicated to fostering a diverse student body and promoting leadership and innovation. </p>
-      <p class="pars"> Retention Rate: 97% of first-year students continue their studies for a second year, ranking in the top 10% of colleges. </p>
-      <p class="pars">Employment Rates: Over 95% of graduates enter full-time employment or further education within six months of graduation.  </p>
-     <p class="pars">Average Salary: Graduates earn an average salary of $50,000 in their early career, with higher earnings in fields like Business Administration and Computer Science. </p>
-      <p class="pars">Financial Aid: The university provides financial aid to over 200 disciplines, ensuring access to quality education for all students. </p>
+      <p class="pars2">Graduation Rate: Approximately 92% of students complete their degrees, placing UNC in the top 5% nationwide for graduation outcomes. to thrive in a rapidly evolving economy. With a focus on academic excellence, UNC Chapel Hill is dedicated to fostering a diverse student body and promoting leadership and innovation. </p>
+      <p class="pars3"> Retention Rate: 97% of first-year students continue their studies for a second year, ranking in the top 10% of colleges. </p>
+      <p class="pars4">Employment Rates: Over 95% of graduates enter full-time employment or further education within six months of graduation.  </p>
+     <p class="pars5">Average Salary: Graduates earn an average salary of $50,000 in their early career, with higher earnings in fields like Business Administration and Computer Science. </p>
+      <p class="pars6">Financial Aid: The university provides financial aid to over 200 disciplines, ensuring access to quality education for all students. </p>
      <img class="instalogo" src="insta.png" alt="Logo">
      <img class="ytlogo" src="yt.png" alt="Logo">
      <img class="linkedlogo" src="1656994981linkedin-icon.png" alt="Logo">
