Add 'Get Started - Admissions' button to index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
      <a href="https://www.instagram.com/uncchapelhill/" class="instagramlink">Instagram</a>
      <a href="https://www.youtube.com/c/uncchapelhill" class="youtubelink">YouTube</a>
      <a href="https://www.linkedin.com/feed/" class="linkedinlink">Linkedin</a>
+     <button class="my-button">Get Started - Admissions</button>
     </main>
 </body>
 </html>
